--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "preview:client": "vite preview"
   },
   "dependencies": {
-    "preact": "^10.26.4"
+    "preact": "^10.26.4",
+    "styled-components": "^6.1.17"
   },
   "devDependencies": {
     "@preact/preset-vite": "^2.10.1",
+    "@types/styled-components": "^5.1.34",
     "typescript": "~5.7.2",
     "vite": "^6.3.1"
   }
